@@ -27,4 +27,4 @@ ARG DEPENDENCY=/workspace/app/target/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","com.funny.memes.funnymemes.FunnyMemesApplication"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Xmx256m", "-Xss512k", "-XX:MetaspaceSize=100m", "-XshowSettings:vm", "-cp","app:app/lib/*","com.funny.memes.funnymemes.FunnyMemesApplication"]
